updated about me text

--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -4,11 +4,17 @@ icon: fa-user
 order: 3
 ---
 
-<a href="#" class="image featured"><img src="assets/images/pic08.jpg" alt="" /></a>
+<a href="#" class="image featured"><img src="assets/images/about_me.jpg" alt="" /></a>
 
-<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-ornare iaculis.</p>
+<p>I am a final year Electrical Engineering and Information
+  Technology student at TU Munich. Currently, I am working on
+  Deep Generative Models for Natural Language Processing (NLP)
+  using Variational Autoencoders (VAE) at ETH Zurich. I am passionate
+  about Data Science and Deep Learning because it is fun to dig into 
+  data outside of my subject area, extract insights and gain knowledge
+  in various forms. Besides that, I am an avid traveler who captures 
+  beautiful moments with his camera. Having not only lived but also
+  studied and researched in Germany,France, United Arab Emirates, United
+  States of America, Canada and Switzerland; I truely see myself as a
+  cosmopolitan realizing the positive things in every situation.
+</p>
