fixed typos in about me section

--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -14,7 +14,8 @@ order: 3
   data outside of my subject area, extract insights and gain knowledge
   in various forms. Besides that, I am an avid traveler who captures 
   beautiful moments with his camera. Having not only lived but also
-  studied and researched in Germany,France, United Arab Emirates, United
-  States of America, Canada and Switzerland; I truely see myself as a
-  cosmopolitan realizing the positive things in every situation.
+  studied and researched in Germany, France, United Arab Emirates, United
+  States of America, Canada and Switzerland; I truely see myself as a cosmopolitan
+  who over the years developed an attitude of gratitude and the ability to see
+  the positive in every obstacle I encounter and overcome.
 </p>
