updated contact text

--- a/_sections/contact.html
+++ b/_sections/contact.html
@@ -4,10 +4,12 @@ icon: fa-envelope
 order: 4
 ---
 
-<p>Elementum sem parturient nulla quam placerat viverra
-mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+<p>
+If you have any questions about me, feedback regarding my content or you just feel like having an 
+exciting discussion about Data Science, Machine Learning, Photography or your next travel destination; 
+feel free to contact me anytime. I also encourage you to follow me on Instagram, LinkedIn or Facebook and to check out my
+GitHub repositories. For all that just click the corresponding icons on the bottom of the left panel.
+</p>
 
 <form method="post" action="https://formspree.io/{{ site.email }}">
   <div class="row">
