--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -7,11 +7,11 @@ icon: fa-comment
 order: 1
 ---
 <header>
-  <h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-  site template designed by <a href="http://html5up.net/prologue">HTML5 UP</a>.</h2>
-  <p>Adapted for Jekyll by <a href=https://chrisbobbe.github.io/>Chris Bobbe</a>. Get started on <a href="https://github.com/chrisbobbe/jekyll-theme-prologue">GitHub!</a></p>
+  <h2 class="alt">Hi, I'm <strong>Amine</strong>! Welcome to my personal webpage!</h2>
+  <p>Traveler and young scientist with a distinct focus on Data Science, Machine Learning and Information Security. 
+    I thrive on solving hard problems by developing novel and innovative ideas that challenge the state of the art.</p>
 </header>
 
 <footer>
-  <a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+  <a href="#portfolio" class="button scrolly">Photography</a>
 </footer>
