--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -1,54 +1,68 @@
 ---
 title: Photography
 icon: fa-th
-order: 2
+order: 5
 ---
 
-<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-  egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-  Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-  fusce hendrerit lacus ridiculus.</p>
+<p>Traveling is a major part of my life which motivates me to continue learning, exploring and breaking things. 
+   I has broadened my mind and changed my view of people and science. Even though, I already learned a lot, I feel like
+  it is a never ending lesson. I consider myself as a child of the world and want to inspire others to feel the same! Below
+  are some impressions and moments I captured on my recent travels over the last years.</p>
 
   <div class="row">
     <div class="4u 12u$(mobile)">
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic02.jpg' | relative_url }}" alt="Ipsum Feugiat" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/subin_black_forest.jpg' | relative_url }}" alt="Black Forest" /></a>
         <header>
-          <h3>Ipsum Feugiat</h3>
+          <h3>Black Forest</h3>
         </header>
       </div>
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic03.jpg' | relative_url }}" alt="Rhoncus Semper" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/san_salvatore.jpg' | relative_url }}" alt="San Salvatore Lugano" /></a>
         <header>
-          <h3>Rhoncus Semper</h3>
-        </header>
-      </div>
-    </div>
-    <div class="4u 12u$(mobile)">
-      <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic04.jpg' | relative_url }}" alt="Magna Nullam" /></a>
-        <header>
-          <h3>Magna Nullam</h3>
-        </header>
-      </div>
-      <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic05.jpg' | relative_url }}" alt="Natoque Vitae" /></a>
-        <header>
-          <h3>Natoque Vitae</h3>
+          <h3>San Salvatore Lugano</h3>
         </header>
       </div>
     </div>
     <div class="4u 12u$(mobile)">
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic06.jpg' | relative_url }}" alt="Dolor Penatibus" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/okinawa.jpg' | relative_url }}" alt="Okinawa Sunset" /></a>
         <header>
-          <h3>Dolor Penatibus</h3>
+          <h3>Okinawa Sunset</h3>
         </header>
       </div>
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic07.jpg' | relative_url }}" alt="Orci Convallis" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/rooftop.jpg' | relative_url }}" alt="Random Rooftop Zurich" /></a>
         <header>
-          <h3>Orci Convallis</h3>
+          <h3>Random Rooftop Zurich</h3>
+        </header>
+      </div>
+    </div>
+    <div class="4u 12u$(mobile)">
+      <div class="item">
+        <a href="#" class="image fit"><img src="{{ 'assets/images/vierwaldstättersee.jpg' | relative_url }}" alt="Lake Lucerne" /></a>
+        <header>
+          <h3>Lake Lucerne</h3>
+        </header>
+      </div>      
+      <div class="item">
+        <a href="#" class="image fit"><img src="{{ 'assets/images/milan.jpg' | relative_url }}" alt="Duomo Milan" /></a>
+        <header>
+          <h3>Duomo Milan</h3>
+        </header>
+      </div>
+    </div>
+    <div class="4u 12u$(mobile)">
+      <div class="item">
+        <a href="#" class="image fit"><img src="{{ 'assets/images/subin_rhinefalls.jpg' | relative_url }}" alt="Rhinefalls Schaffhausen" /></a>
+        <header>
+          <h3>Rhinefalls Schaffhausen</h3>
+        </header>
+      </div>
+      <div class="item">
+        <a href="#" class="image fit"><img src="{{ 'assets/images/polyterrasse.jpg' | relative_url }}" alt="Polyterrasse ETH Zurich" /></a>
+        <header>
+          <h3>Polyterrasse ETH Zurich</h3>
         </header>
       </div>
     </div>
