fixed milan pano pic

--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -46,7 +46,7 @@ order: 5
         </header>
       </div>      
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/milan.jpg' | relative_url }}" alt="Duomo Milan" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/milan_pano.jpg' | relative_url }}" alt="Duomo Milan" /></a>
         <header>
           <h3>Duomo Milan</h3>
         </header>
