added 6 new pix second row :)

--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -52,3 +52,47 @@ order: 5
         </header>
       </div>
     </div>
+     
+  <div class="row">
+    <div class="4u 12u$(mobile)">
+      <div class="item">
+        <a href="#" class="image fit"><img src="{{ 'assets/images/schlossburg.jpg' | relative_url }}" alt="Schloss Burg Solingen" /></a>
+        <header>
+          <h3>Schloss Burg Solingen</h3>
+        </header>
+      </div>
+      <div class="item">
+        <a href="#" class="image fit"><img src="{{ 'assets/images/subin_lugano.jpg' | relative_url }}" alt="Lake Lugano" /></a>
+        <header>
+          <h3>Lake Lugano</h3>
+        </header>
+      </div>
+    </div>
+    <div class="4u 12u$(mobile)">
+      <div class="item">
+        <a href="#" class="image fit"><img src="{{ 'assets/images/subin_rhinefalls.jpg' | relative_url }}" alt="Rhinefalls Schaffhausen" /></a>
+        <header>
+          <h3>Rhinefalls Schaffhausen</h3>
+        </header>
+      </div>
+      <div class="item">
+        <a href="#" class="image fit"><img src="{{ 'assets/images/polyterrasse.jpg' | relative_url }}" alt="Polyterrasse ETH Zurich" /></a>
+        <header>
+          <h3>Polyterrasse ETH Zurich</h3>
+        </header>
+      </div>
+    </div>
+    <div class="4u 12u$(mobile)">
+      <div class="item">
+        <a href="#" class="image fit"><img src="{{ 'assets/images/mantua_river.jpg' | relative_url }}" alt="Lake Mantua" /></a>
+        <header>
+          <h3>Lake Mantua</h3>
+        </header>
+      </div>      
+      <div class="item">
+        <a href="#" class="image fit"><img src="{{ 'assets/images/subin_black_forest2.jpg' | relative_url }}" alt="Black Forest" /></a>
+        <header>
+          <h3>Black Forest</h3>
+        </header>
+      </div>
+    </div> 
