--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -5,9 +5,10 @@ order: 4
 ---
 
 <p>Traveling is a major part of my life which motivates me to continue learning, exploring and breaking things. 
-   It has broadened my mind and changed my view of people and science. Even though I already learned a lot, I feel like
-  traveling is a never ending lesson. I consider myself as a child of the world and want to inspire others to feel the same! Below
-  are some impressions and moments I captured on my recent travels over the last years.</p>
+   It has broadened my mind and changed my view of people and science. Even though I already learned a lot, I feel like 
+   traveling is a never ending lesson. I consider myself as a child of the world and want to inspire others to feel the same! Below 
+   are some impressions and moments I captured on my recent travels over the last years.
+</p>
 
   <div class="row">
     <div class="4u 12u$(mobile)">
