changed footer from portfolio to about-me

--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -7,11 +7,11 @@ icon: fa-comment
 order: 1
 ---
 <header>
-  <h2 class="alt">Hi, I'm <strong>Amine</strong>! Welcome to my personal webpage!</h2>
+  <h2 class="alt">Hi, I'm <strong>Amine</strong>! Welcome to my personal homepage!</h2>
   <p>Traveler and young scientist with a distinct focus on Data Science, Machine Learning and Information Security. 
     I thrive on solving hard problems by developing novel and innovative ideas that challenge the state of the art.</p>
 </header>
 
 <footer>
-  <a href="#portfolio" class="button scrolly">Photography</a>
+  <a href="#about-me" class="button scrolly">Photography</a>
 </footer>
