Changed the name of Footer Button as well

--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -13,5 +13,5 @@ order: 1
 </header>
 
 <footer>
-  <a href="#about-me" class="button scrolly">Photography</a>
+  <a href="#about-me" class="button scrolly">About Me</a>
 </footer>
