--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -47,9 +47,9 @@ order: 4
         </header>
       </div>      
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/milan_pano.jpg' | relative_url }}" alt="Duomo Milan" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/como.jpg' | relative_url }}" alt="Lake Como" /></a>
         <header>
-          <h3>Duomo Milan</h3>
+          <h3>Lake Como</h3>
         </header>
       </div>
     </div>
