changed picture for testing

--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -4,7 +4,7 @@ icon: fa-user
 order: 2
 ---
 
-<a href="#" class="image featured"><img src="assets/images/about_me.jpg" alt="" /></a>
+<a href="#" class="image featured"><img src="assets/images/closeup.jpg" alt="Me" /></a>
 
 <p>I am a final year Electrical Engineering and Information
   Technology student at TU Munich. Currently, I am working on
