back to old status, split does look awful

--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -4,19 +4,18 @@ icon: fa-user
 order: 2
 ---
 
-<div id="header">
-  ... contents go here ...
-</div>
+<a href="#" class="image featured"><img src="assets/images/about_me.jpg" alt="Me" /></a>
 
-<div id="content">
-  <div class="col">
-    <img src="assets/images/about_me.jpg" alt="" />
-  </div>
-  <div class="col">
-    <p>Example content</p>
-  </div>
-</div>
-
-<div id="footer">
-  ... contents go here ...
-</div>
+<p>I am a final year Electrical Engineering and Information
+  Technology student at TU Munich. Currently, I am working on
+  Deep Generative Models for Natural Language Processing (NLP)
+  using Variational Autoencoders (VAE) at ETH Zurich. I am passionate
+  about Data Science and Deep Learning because it is fun to dig into 
+  data outside of my subject area, extract insights and gain knowledge
+  in various forms. Besides that, I am an avid traveler who captures 
+  beautiful moments with his camera. Having not only lived but also
+  studied and researched in Germany, France, United Arab Emirates, United
+  States of America, Canada and Switzerland; I truely see myself as a cosmopolitan
+  who over the years developed an attitude of gratitude and the ability to see
+  the positive in every obstacle I encounter and overcome.
+</p>
