added closeup portrait, removed flipped pic

--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -57,9 +57,9 @@ order: 4
   <div class="row">
     <div class="4u 12u$(mobile)">
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/schlossburg.jpg' | relative_url }}" alt="Schloss Burg Solingen" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/subin_closeup.jpg' | relative_url }}" alt="Closeup Portrait" /></a>
         <header>
-          <h3>Schloss Burg Solingen</h3>
+          <h3>Closeup Portrait</h3>
         </header>
       </div>
       <div class="item">
