changed order, subin_lugano is vertical!

--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -47,9 +47,9 @@ order: 4
         </header>
       </div>      
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/subin_lugano.jpg' | relative_url }}" alt="Lake Lugano" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/polyterrasse.jpg' | relative_url }}" alt="Polyterrasse ETH ZurichLake Lugano" /></a>
         <header>
-          <h3>Lake Lugano</h3>
+          <h3>Polyterrasse ETH Zurich</h3>
         </header>
       </div>
     </div>
@@ -77,9 +77,9 @@ order: 4
         </header>
       </div>
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/polyterrasse.jpg' | relative_url }}" alt="Polyterrasse ETH Zurich" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/subin_lugano.jpg' | relative_url }}" alt="Lake Lugano" /></a>
         <header>
-          <h3>Polyterrasse ETH Zurich</h3>
+          <h3>Lake Lugano</h3>
         </header>
       </div>
     </div>
