update about me section

--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -10,12 +10,12 @@ order: 2
   Technology student at TU Munich. Currently, I am working on
   Deep Generative Models for Natural Language Processing (NLP)
   using Variational Autoencoders (VAE) at ETH Zurich. I am passionate
-  about Data Science and Deep Learning because it is fun to dig into 
-  data outside of my subject area, extract insights and gain knowledge
-  in various forms. Besides that, I am an avid traveler who captures 
-  beautiful moments with his camera. Having not only lived but also
-  studied and researched in Germany, France, United Arab Emirates, United
-  States of America, Canada and Switzerland; I truely see myself as a cosmopolitan
-  who over the years developed an attitude of gratitude and the ability to see
-  the positive in every obstacle I encounter and overcome.
+  about Bayesian methods in statistical Machine Learning and Deep Learning. 
+  Moreover, I enjoy digging into and working on research projects outside of my expertise, to extract
+  insights from data and to learn new things every day. Besides research, I am an avid traveler who captures 
+  beautiful moments with his camera. I have lived, studied and researched in Germany, France, 
+  United Arab Emirates (UAE), the United States of America (USA), Canada, Switzerland and
+  the United Kingdom (UK). My parents are from Poland and Morocco. I was born and grew up in Germany. 
+  Therfore, I truely see myself as a cosmopolitan who over the years has learned to appreciate and be grateful
+  for all the variety and wisdom other cultures and societies have to offer.
 </p>
