--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -8,8 +8,8 @@ order: 1
 ---
 <header>
   <h2 class="alt">Hi, I'm <strong>Amine</strong>! Welcome to my personal homepage!</h2>
-  <p>Traveler and young scientist with a distinct focus on Data Science, Machine Learning and Information Security. 
-    I thrive on solving hard problems by developing novel and innovative ideas that challenge the state of the art.</p>
+  <p>Aspiring researcher and traveler. I thrive on solving hard problems by developing novel ideas
+    and innovative methods that improve state of the art.</p>
 </header>
 
 <footer>
